intro js topページに戻る

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,6 +1,7 @@
 <section class="main">
   <div class="img">
     <div class="info">
+      <a href="#top" id="btn-backtotop"><span class="arrow arrow_up"></span></a>
       <div class="info__main">
         <h2 class="info__title">
           Spices up
