--- a/app/assets/stylesheets/intro.scss
+++ b/app/assets/stylesheets/intro.scss
@@ -91,6 +91,112 @@
   padding: 1.75695vw 2.19619vw;
 }
 
+/* ========================================================
+矢印アイコン
+=========================================================*/
+.arrow {
+  position: relative;
+  display: inline-block;
+  padding: 0 0 0 16px;
+  color: #000;
+  vertical-align: middle;
+  text-decoration: none;
+  &::after,
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    vertical-align: middle;
+  }
+}
+// 上矢印
+.arrow_down::before,
+.arrow_up::before {
+  top: auto;
+  left: auto;
+  bottom: 8px;
+  width: 10px;
+  height: 10px;
+  border-top: 3px solid #fff;
+  border-right: 3px solid #fff;
+  transform: rotate(-45deg);
+}
+
+/* ========================================================
+ページトップに戻るボタン
+=========================================================*/
+#btn-backtotop {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 1000;
+  transition: all 1s ease-out;
+  transition: bottom 0.2s ease-out;
+  opacity: 0;
+  @media screen and (max-width: 767px) {
+    bottom: 10px;
+    right: 5px;
+  }
+  // スクロール時にJSから付与されるクラス
+  &.fadein {
+    opacity: 1;
+  }
+  // ホバー時の挙動
+  &:hover {
+    opacity: 0.8;
+    bottom: 34px;
+    @media screen and (max-width: 767px) {
+      bottom: 10px;
+    }
+    &::after {
+      box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.4);
+      @media screen and (max-width: 767px) {
+        box-shadow: none;
+      }
+    }
+  }
+  // ボタンのベース
+  &::after {
+    content: "";
+    display: block;
+    color: #fff;
+    text-align: center;
+    width: 80px;
+    height: 80px;
+    padding: 4px;
+    border-radius: 8px;
+    background-color: #000;
+    transition: all 0.3s;
+    transform: scale(0.8) rotate(45deg);
+    transition: background-color 0.5s ease-out;
+    @media screen and (max-width: 767px) {
+      width: 40px;
+      height: 40px;
+    }
+  }
+  // 矢印マーク
+  .arrow {
+    top: 72px;
+    left: 13px;
+    @media screen and (max-width: 767px) {
+      top: 46px;
+      left: -1px;
+    }
+    &::before {
+      width: 20px;
+      height: 20px;
+      z-index: 1;
+      @media screen and (max-width: 767px) {
+        width: 10px;
+        height: 10px;
+      }
+    }
+  }
+}
+
 // ========992~1199 レイアウト============//
 @media screen and (min-width: 992px) and (max-width: 1199px) {
   .img {
@@ -190,7 +296,7 @@
 // ========555~456 レイアウト============//
 @media screen and (min-width: 456px) and (max-width: 555px) {
   .img {
-    height: 2640vh;
+    height: 2650vh;
     background-attachment: fixed;
     background-size: auto;
     background-position: center;
@@ -226,7 +332,7 @@
 // ========455~356 レイアウト============//
 @media screen and (min-width: 356px) and (max-width: 455px) {
   .img {
-    height: 2680vh;
+    height: 2400vh;
     background-attachment: fixed;
     background-size: auto;
     background-position: center;
@@ -234,7 +340,7 @@
 
   .info {
     width: 777px;
-    padding-left: 450px;
+    padding-left: 100px;
 
     &__title {
       font-size: 60px;
